# voice_erc721-

./: .gitignore
app/: Cargo.toml  package-lock.json  package.json
app/src/: attributes_ipfs.rs  contract_abi.json  contract_with_abi.rs  ens.rs  get_reqwest.rs  hyper.rs  index.js  ipfs.rs  jsonipfs.rs  main.rs  serde_json.rs
contracts/: nft.sol
