[package]
name = "app"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
eyre = "0.6"
serde_json = "1.0.64"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "ens"
path = "src/ens.rs"