[package]
name = "app"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
ethers = { version = "1.0.0", features = ["abigen"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"
ethers-core = "1.0.0"
ethers-contract = "1.0.0"
web-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"